# orteaf

./: Agent.md  CMakeLists.txt  CONTRIBUTING.md  README.md
build-codex/: CMakeCache.txt  Makefile  (+3 more)
orteaf/: CMakeLists.txt
orteaf/include/orteaf/internal/architecture/: architecture.h  cuda_detect.h  mps_detect.h
orteaf/include/orteaf/internal/backend/: backend_traits.h
orteaf/include/orteaf/version/: version.h.in
orteaf/src/internal/: placeholder.cpp
orteaf/src/internal/architecture/: cpu_detect.cpp  cuda_detect.cpp  mps_detect.cpp
orteaf/src/internal/runtime/: README.md
tests/: CMakeLists.txt
tests/internal/architecture/: architecture_test.cpp  cpu_detect_test.cpp  cuda_detect_test.cpp  cuda_detect_test.cu  mps_detect_test.cpp  mps_detect_test.mm
tests/internal/backend/: backend_tables_test.cpp
tests/internal/backend/cpu/: cpu_alloc_test.cpp  cpu_heap_ops_test.cpp  cpu_resource_test.cpp
tests/internal/backend/cuda/: cuda_alloc_copy_test.cu  cuda_alloc_test.cu  cuda_check_error_test.cu  cuda_context_stream_event_test.cpp  cuda_context_stream_event_test.cu  cuda_context_test.cu  cuda_device_test.cu  cuda_event_test.cu  cuda_graph_test.cu  cuda_init_test.cpp  cuda_init_test.cu  cuda_kernel_embed_test.cu  cuda_module_function_test.cu  cuda_stats_test.cu  cuda_stream_test.cu
tests/internal/backend/mps/: metal_kernel_embed_test.mm  mps_buffer_test.mm  mps_command_queue_buffer_test.mm  mps_device_test.mm  mps_encoder_test.mm  mps_event_test.mm  mps_fence_ticket_test.mm  mps_fence_token_test.mm  mps_heap_test.mm  mps_library_function_pipeline_test.mm  mps_reuse_ticket_test.mm  mps_reuse_token_test.mm  mps_stats_test.mm  mps_texture_test.mm
tests/internal/base/: block_vector_test.cpp  handle_test.cpp  heap_vector_test.cpp  inline_vector_test.cpp  small_vector_test.cpp
tests/internal/base/manager/: pool_manager_test.cpp
tests/internal/base/pool/: with_control_block_binding_test.cpp
tests/internal/diagnostics/error/: error_result_test.cpp
tests/internal/ops/: ops_tables_test.cpp
tests/internal/runtime/: cpu_device_manager_test.cpp  mps_device_manager_test.cpp
tests/internal/runtime/cpu/: cpu_device_manager_mock_test.cpp  cpu_device_manager_test.cpp
tests/internal/runtime/mps/: mps_command_queue_manager_mock_test.mm  mps_command_queue_manager_test.mm  mps_compute_pipeline_state_manager_test.mm  mps_device_manager_mock_test.cpp  mps_device_manager_test.mm  mps_fence_pool_test.mm  mps_library_manager_test.mm  mps_stream_manager_mock_test.cpp
tests/internal/testing/: error_assert.h  static_mock.h
tests/internal/version/: version_test.cpp
(+373 files in other folders)
